--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_makanan"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Makanan" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_minuman"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Minuman" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_cemilan"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Cemilan" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Tentang Kami">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_about"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="About" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_support"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Support" />
         </menu>
     </item>
 
