--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.SupportFragment">
+    tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.Fragment.SupportFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
