--- a/app/src/main/res/layout/fragment_sayuran.xml
+++ b/app/src/main/res/layout/fragment_sayuran.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.Fragment.mPanasFragment">
+    tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.Fragment.SayuranFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Minuman Panas" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
