--- a/app/src/main/res/layout/fragment_sayuran2.xml
+++ b/app/src/main/res/layout/fragment_sayuran2.xml
@@ -1,13 +1,44 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.Fragment.SayuranFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recommended"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"/>
 
-</FrameLayout>
+    <TextView
+        android:layout_width="360dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        android:gravity="center"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What's New!"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"/>
+
+    <TextView
+        android:layout_width="360dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        android:gravity="center"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp" />
+
+</LinearLayout>
