--- a/app/src/main/res/layout/fragment_cemilan.xml
+++ b/app/src/main/res/layout/fragment_cemilan.xml
@@ -21,19 +21,9 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
             android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/lapis_terigu" />
-
-        <TextView
-            android:id="@+id/textViewJudul"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignBottom="@+id/imageView"
-            android:layout_marginLeft="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@android:color/white"
-            android:text="Judul" />
 
         <TextView
             android:id="@+id/textViewDeskripsi"
@@ -43,41 +33,22 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:text="Deskripsi" />
+            android:text="Judul"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-        <Button
+
+        <ImageButton
             android:id="@+id/buttonEdit"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:text="EDIT"
-            android:textColor="?attr/colorPrimary" />
-
-        <Button
-            android:id="@+id/buttonDelete"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@+id/buttonEdit"
-            android:text="DELETE"
-            android:textColor="?attr/colorAccent"
-             />
-
-        <ImageButton
-            android:id="@+id/buttonShare"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:layout_marginRight="16dp"
-            android:tint="#757575"
-            app:srcCompat="@drawable/ic_search_black_24dp" />
-
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="Lihat Resep"
+            android:textColor="?attr/colorPrimary"
+            app:srcCompat="@drawable/resep" />
 
 
     </RelativeLayout>
