icon makanan, minuman, camilan

--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -1,39 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-    android:foreground="?attr/selectableItemBackground"
+    android:layout_width="match_parent"
+    android:layout_height="304dp"
+    android:layout_gravity="center"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:layout_gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="304dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+
+    android:foreground="?attr/selectableItemBackground">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
             android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/lapis_terigu" />
-
-        <TextView
-            android:id="@+id/textViewJudul"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignBottom="@+id/imageView"
-            android:layout_marginLeft="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@android:color/white"
-            android:text="Judul" />
 
         <TextView
             android:id="@+id/textViewDeskripsi"
@@ -43,43 +34,26 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="16dp"
+            android:text="Judul"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:text="Deskripsi" />
+            android:textSize="25dp" />
 
-        <Button
-            android:id="@+id/buttonEdit"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:text="EDIT"
-            android:textColor="?attr/colorPrimary" />
-
-        <Button
-            android:id="@+id/buttonDelete"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@+id/buttonEdit"
-            android:text="DELETE"
-            android:textColor="?attr/colorAccent"
-            />
 
         <ImageButton
-            android:id="@+id/buttonShare"
+            android:id="@+id/buttonEditMinuman"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/textViewDeskripsi"
-            android:layout_marginRight="16dp"
-            android:tint="#757575"
-            app:srcCompat="@drawable/ic_search_black_24dp" />
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:elevation="5dp"
+            android:text="Lihat Resep"
+            android:textColor="?attr/colorPrimary"
+            app:srcCompat="@drawable/resep" />
 
 
     </RelativeLayout>
+
 
 </android.support.v7.widget.CardView>
