--- a/app/src/main/res/layout/fragment_cemilan.xml
+++ b/app/src/main/res/layout/fragment_cemilan.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-    android:foreground="?attr/selectableItemBackground"
+    android:layout_width="match_parent"
+    android:layout_height="304dp"
+    android:layout_gravity="center"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:layout_gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="304dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:foreground="?attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,17 +33,18 @@
             android:padding="16dp"
             android:text="Judul"
             android:textAlignment="center"
-            android:textSize="25dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="25dp" />
 
 
         <ImageButton
-            android:id="@+id/buttonEdit"
+            android:id="@+id/buttonEditCamilan"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:elevation="5dp"
             android:text="Lihat Resep"
             android:textColor="?attr/colorPrimary"
             app:srcCompat="@drawable/resep" />
