--- a/app/src/main/res/layout/fragment_input_cemilan.xml
+++ b/app/src/main/res/layout/fragment_input_cemilan.xml
@@ -26,7 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Resep Camilan"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/editText"
