--- a/app/src/main/res/layout/fragment_sayuran.xml
+++ b/app/src/main/res/layout/fragment_sayuran.xml
@@ -1,46 +1,69 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="javoods.xirpl32425263034.project2.smktelkom_mlg.sch.id.javoods.Fragment.SayuranFragment">
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="304dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="10dp"
+            android:foreground="?attr/selectableItemBackground">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recommended"
-        android:paddingTop="15dp"
-        android:paddingLeft="15dp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="360dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:background="@color/black"
-        android:gravity="center"
-        android:paddingLeft="15dp"
-        android:paddingTop="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="What's New!"
-        android:paddingTop="15dp"
-        android:paddingLeft="15dp"/>
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="5dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/lapis_terigu" />
 
-    <TextView
-        android:layout_width="360dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:background="@color/black"
-        android:gravity="center"
-        android:paddingLeft="15dp"
-        android:paddingTop="10dp" />
+                <TextView
+                    android:id="@+id/textViewDeskripsi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/imageView"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:padding="16dp"
+                    android:text="Judul"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textSize="25dp" />
 
-</LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/buttonEditMinuman"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:elevation="5dp"
+                    android:text="Lihat Resep"
+                    android:textColor="?attr/colorPrimary"
+                    app:srcCompat="@drawable/resep" />
+
+
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</ScrollView>
