--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -11,7 +11,7 @@
 
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cardView"
+            android:id="@+id/cardViewMinuman"
             android:layout_width="match_parent"
             android:layout_height="304dp"
             android:layout_gravity="center"
@@ -28,7 +28,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageViewMinuman"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginTop="5dp"
@@ -36,7 +36,7 @@
                     android:src="@drawable/lapis_terigu" />
 
                 <TextView
-                    android:id="@+id/textViewDeskripsi"
+                    android:id="@+id/tvJudulMinuman"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/imageView"
@@ -50,7 +50,7 @@
 
 
                 <ImageButton
-                    android:id="@+id/buttonEditMinuman"
+                    android:id="@+id/bLihatMinuman"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
