--- a/app/src/main/res/layout/fragment_ikan.xml
+++ b/app/src/main/res/layout/fragment_ikan.xml
@@ -10,7 +10,7 @@
 
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cardView"
+            android:id="@+id/cardViewIkan"
             android:layout_width="match_parent"
             android:layout_height="304dp"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageViewIkan"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginTop="5dp"
@@ -35,7 +35,7 @@
                     android:src="@drawable/lapis_terigu" />
 
                 <TextView
-                    android:id="@+id/textViewDeskripsi"
+                    android:id="@+id/tvJudulIkan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/imageView"
@@ -49,7 +49,7 @@
 
 
                 <ImageButton
-                    android:id="@+id/buttonEditMinuman"
+                    android:id="@+id/bLihatIkan"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
